--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.20.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 log = "0.4.17"
+env_logger = "0.9.0"
 image = "0.24.3"
 futures = "0.3.21"
 bytes = "1.2.1"
